# food-delivery-gym

./: .env.example  .gitignore  README.md  output.prof  pyproject.toml  requirements.txt  setup.py
food_delivery_gym/: __init__.py
food_delivery_gym/examples/: generate_total_statistics_graph.py  run_optimizer.py  script_for_profile_code.py  test.py  train_ppo_model.py
food_delivery_gym/main/: __init__.py  __main__.py
food_delivery_gym/notebooks/: generate_graphs.py  reward_objective_graphs.ipynb
food_delivery_gym/statistics_distributions/: generate_graph_distribution_for_estimate_delay_time.py  generate_graph_distribution_for_movement_rate_definition.py  generate_graph_distribution_for_variables_definition.py  generate_graph_distributions_for_generate_costumer.py
notebooks/: reward_objective_graphs.ipynb
objective_table/: generate_table.py  template_objective_table.xlsx
scripts/: convert_metrics.py  dilson_proposal.py  generate_boxplots.py  generate_plots.py  generate_table.py  generate_total_statistics_graph.py  plot_episode_metrics.py  run_batch_eval.py  run_optimizer.py  script_for_profile_code.py  test_runner.py  train_ppo_model.py
scripts/legacy/: grid_map_view.py  parable.py
scripts/legado/: or_tools_example.py
src/examples/: run_optimizer.py  script_for_profile_code.py  test.py  train_ppo_model.py
src/notebooks/: generate_graphs.ipynb  generate_graphs.py  reward_objective_graphs.ipynb
src/statistics_distributions/: generate_graph_distribution_for_estimate_time_for_production.py  (+3 more)
templates/: template_objective_table.xlsx
(+209 files in other folders)
