[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "food_delivery_gym"
version = "1.1.0"
description = "Custom Gymnasium environment for simulating food delivery operations."
readme = "README.md"
authors = [
  { name = "Marcos", email = "marcos13cf@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
  "simpy",
  "matplotlib",
  "pygame",
  "gymnasium",
  "numpy"
]

[project.urls]
Homepage = "https://github.com/MarquinhoCF/food-delivery-gym"
Repository = "https://github.com/MarquinhoCF/food-delivery-gym"

[tool.hatch.build.targets.wheel]
packages = ["food_delivery_gym"]